--- a/README
+++ b/README
@@ -1,5 +1,13 @@
-Simple tools to control the launching, tagging, and termination of EC2 instances.
+Automated EC2 Load Management
+=============================
 
-The AWS credentials for the account being used to host the instances must be defined 
-in the shell/cron environment.  For shell, define AWS_ACCESS_KEY and AWS_SECRET_KEY
-in .bashrc.  For cron, define in the user account crontab.
+This is a small set of simple Linux command line tools that control the launching, 
+tagging, and termination of EC2 instances.
+
+It is intended to be used with cron to control a variable load over a finite time 
+interval for the purpose of testing network monitoring software.  Also saves $$.
+
+Configuration
+-------------
+
+Look at ec2.cfg.template for details.
