Change README format to GFM

--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-Automated EC2 Load Management
-=============================
+# Automated EC2 Load Management
 
 This is a small set of simple Linux command line tools that control the launching, 
 tagging, and termination of EC2 instances.
@@ -7,7 +6,6 @@ tagging, and termination of EC2 instances.
 It is intended to be used with cron to control a variable load over a finite time 
 interval for the purpose of testing network monitoring software.  Also saves $$.
 
-Configuration
--------------
+## Configuration
 
 Look at ec2.cfg.template for details.
